Prepare for deployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="card">
-        <h2 style="text-align:center; color:#1e293b; margin-top:0;">AI Behavioral Screening</h2>
+        <h2 style="text-align:center; color:#1e293b; margin-top:0;">ASD Behavioral Screening</h2>
         <form action="/predict" method="post">
             {% for col in columns %}
                 {% if col in ['ethnicity', 'contry_of_res', 'relation', 'result'] %}
